IngressService/Ingress-Basic/appdeployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-deployment
  labels:
    app: myapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - name: app1-nginx
        image: eglitmyk/myappimage
        ports:
        - containerPort: 80
