IngressService/Ingress-Basic/appClusterIPSvc.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-clusterip-service
  labels:
    app: myappclusterIPsvc
spec:
  type: ClusterIP
  selector:
    app: myapp
  ports:
  - port: 80
    targetPort: 80
